@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.coursera"
        name="Coursera"
-       version="0.0.3"
+       version="0.0.4"
        provider-name="newatv2user">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
