@@ -1,3 +1,6 @@
+[B]Version 0.0.4[/B]
+  - Browse Inactive Courses
+  
 [B]Version 0.0.3[/B]
   - Added Trailers
 
